// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Guest schema byName: should work 1`] = `
Object {
  "data": Object {
    "byName": Object {
      "NIK": "4532711991301150",
      "email": "Dejon.Beier@Huel.name",
      "firstName": "Maurine",
      "lastName": "Rau",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Guest schema create guest: should work 1`] = `
Object {
  "data": Object {
    "createGuest": Object {
      "NIK": "12345",
      "company": null,
      "email": "john@example.com",
      "firstName": "John",
      "lastName": "Doe",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Guest schema getGuest: should work 1`] = `
Object {
  "data": Object {
    "getGuest": Object {
      "NIK": "4532711991301150",
      "email": "Dejon.Beier@Huel.name",
      "firstName": "Maurine",
      "lastName": "Rau",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Guest schema listGuest: should work 1`] = `
Object {
  "data": Object {
    "listGuest": Array [
      Object {
        "NIK": "4532711991301150",
        "email": "Dejon.Beier@Huel.name",
        "entryToday": Array [],
        "firstName": "Maurine",
        "lastName": "Rau",
      },
      Object {
        "NIK": "4929542228489240",
        "email": "Darrion.Greenfelder@Mueller.org",
        "entryToday": Array [],
        "firstName": "Myrna",
        "lastName": "Mueller",
      },
      Object {
        "NIK": "5114446720603342",
        "email": "Marjorie.Stroman@Friesen.com",
        "entryToday": Array [],
        "firstName": "Audrey",
        "lastName": "Satterfield",
      },
      Object {
        "NIK": "6011973211683353",
        "email": "Gleason_Johnathon@yahoo.com",
        "entryToday": Array [],
        "firstName": "Jayme",
        "lastName": "Kuhlman",
      },
      Object {
        "NIK": "5451502535414044",
        "email": "Zander_Auer@yahoo.com",
        "entryToday": Array [],
        "firstName": "Marcelle",
        "lastName": "Gleason",
      },
      Object {
        "NIK": "5391346992204893",
        "email": "Genoveva.Huels@Quitzon.name",
        "entryToday": Array [],
        "firstName": "Laurence",
        "lastName": "Haag",
      },
      Object {
        "NIK": "4024007138332513",
        "email": "Katrina_Braun@Brenda.tv",
        "entryToday": Array [],
        "firstName": "Zechariah",
        "lastName": "Abshire",
      },
      Object {
        "NIK": "5274384958794918",
        "email": "Else_Abernathy@hotmail.com",
        "entryToday": Array [],
        "firstName": "Enid",
        "lastName": "Klein",
      },
      Object {
        "NIK": "348129022643854",
        "email": "Layne.Yost@Hegmann.me",
        "entryToday": Array [],
        "firstName": "Yadira",
        "lastName": "Oberbrunner",
      },
      Object {
        "NIK": "4532557118938778",
        "email": "Amanda_Jenkins@yahoo.com",
        "entryToday": Array [],
        "firstName": "Reyes",
        "lastName": "Block",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
